Webコンテンツルートのパスを修正

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
   
     server_name vdo.ninja;
   
-    root /vdo.ninja;
+    root /var/www/html/vdo.ninja;
     index index.html;
   
     location ~ ^/([^/]+)/([^/?]+)$ {
